Backend CORS Configuration Update